@@ -9,7 +9,7 @@
     </parent>
     <name>Ehcache Server</name>
     <artifactId>ehcache-server</artifactId>
-    <version>0.7</version>
+    <version>0.8</version>
     <packaging>war</packaging>
     <description>The ehcache W3C and RESTful web services server.</description>
     <dependencies>
@@ -91,30 +91,30 @@
                 </executions>
             </plugin>
             <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-checkstyle-plugin</artifactId>-->
-                <!-- Doesn't work when not internet connected -->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<phase>verify</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>checkstyle</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-                <!--<configuration>-->
-                    <!--<configLocation>${basedir}/checkstyle/checkstyle.xml</configLocation>-->
-                    <!--<suppressionsLocation>${basedir}/checkstyle/suppressions.xml</suppressionsLocation>-->
-                    <!--<headerLocation>${basedir}/checkstyle/ClassHeader.txt</headerLocation>-->
-                    <!--<enableRSS>false</enableRSS>-->
-                    <!--<linkXRef>true</linkXRef>-->
-                    <!--<enableRulesSummary>false</enableRulesSummary>-->
-                    <!--<consoleOutput>true</consoleOutput>-->
-                    <!--<failsOnError>true</failsOnError>-->
-                    <!--<failOnViolation>true</failOnViolation>-->
-                    <!--<includeTestSourceDirectory>true</includeTestSourceDirectory>-->
-                    <!--<enableRulesSummary>true</enableRulesSummary>-->
-                <!--</configuration>-->
+            <!--<groupId>org.apache.maven.plugins</groupId>-->
+            <!--<artifactId>maven-checkstyle-plugin</artifactId>-->
+            <!-- Doesn't work when not internet connected -->
+            <!--<executions>-->
+            <!--<execution>-->
+            <!--<phase>verify</phase>-->
+            <!--<goals>-->
+            <!--<goal>checkstyle</goal>-->
+            <!--</goals>-->
+            <!--</execution>-->
+            <!--</executions>-->
+            <!--<configuration>-->
+            <!--<configLocation>${basedir}/checkstyle/checkstyle.xml</configLocation>-->
+            <!--<suppressionsLocation>${basedir}/checkstyle/suppressions.xml</suppressionsLocation>-->
+            <!--<headerLocation>${basedir}/checkstyle/ClassHeader.txt</headerLocation>-->
+            <!--<enableRSS>false</enableRSS>-->
+            <!--<linkXRef>true</linkXRef>-->
+            <!--<enableRulesSummary>false</enableRulesSummary>-->
+            <!--<consoleOutput>true</consoleOutput>-->
+            <!--<failsOnError>true</failsOnError>-->
+            <!--<failOnViolation>true</failOnViolation>-->
+            <!--<includeTestSourceDirectory>true</includeTestSourceDirectory>-->
+            <!--<enableRulesSummary>true</enableRulesSummary>-->
+            <!--</configuration>-->
             <!--</plugin>-->
 
             <!--Conflicts with Dave Whitla's plugin with the same goal.
@@ -225,7 +225,6 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <skip>false</skip>
                     <includes>
                         <include>**/*UnitTest.java</include>
                     </includes>
@@ -245,7 +244,6 @@
                             <goal>test</goal>
                         </goals>
                         <configuration>
-                            <skip>false</skip>
                             <includes>
                                 <include>**/*Test.java</include>
                             </includes>
@@ -269,29 +267,29 @@
             <!--</configuration>-->
             <!--</plugin>-->
             <!--<plugin>-->
-                <!--<groupId>org.codehaus.mojo</groupId>-->
-                <!--<artifactId>jaxws-maven-plugin</artifactId>-->
-                <!--<configuration>-->
-                    <!--<sei>net.sf.ehcache.server.soap.EhcacheWebServiceEndpoint</sei>-->
-                    <!--<genWsdl>true</genWsdl>-->
-                    <!--<destDir></destDir>-->
-                    <!--<keep>true</keep>-->
-                    <!--<verbose>true</verbose>-->
-                <!--</configuration>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<phase>verify</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>wsgen</goal>-->
-                        <!--</goals>-->
-                        <!--<configuration>-->
-                            <!--<sei>net.sf.ehcache.server.soap.EhcacheWebServiceEndpoint</sei>-->
-                            <!--<genWsdl>true</genWsdl>-->
-                            <!--<keep>true</keep>-->
-                            <!--<verbose>true</verbose>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                <!--</executions>-->
+            <!--<groupId>org.codehaus.mojo</groupId>-->
+            <!--<artifactId>jaxws-maven-plugin</artifactId>-->
+            <!--<configuration>-->
+            <!--<sei>net.sf.ehcache.server.soap.EhcacheWebServiceEndpoint</sei>-->
+            <!--<genWsdl>true</genWsdl>-->
+            <!--<destDir></destDir>-->
+            <!--<keep>true</keep>-->
+            <!--<verbose>true</verbose>-->
+            <!--</configuration>-->
+            <!--<executions>-->
+            <!--<execution>-->
+            <!--<phase>verify</phase>-->
+            <!--<goals>-->
+            <!--<goal>wsgen</goal>-->
+            <!--</goals>-->
+            <!--<configuration>-->
+            <!--<sei>net.sf.ehcache.server.soap.EhcacheWebServiceEndpoint</sei>-->
+            <!--<genWsdl>true</genWsdl>-->
+            <!--<keep>true</keep>-->
+            <!--<verbose>true</verbose>-->
+            <!--</configuration>-->
+            <!--</execution>-->
+            <!--</executions>-->
             <!--</plugin>-->
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -375,29 +373,20 @@
         </pluginRepository>
     </pluginRepositories>
 
-    <!-- Note: site URL repeated here to ensure correct deployment path -->
     <distributionManagement>
         <!--
-          The server id here defined must also appear in ~/.m2/settings.xml with username
-        -->
-        <snapshotRepository>
-            <id>sourceforge.net</id>
-            <name>SF EHCache Snapshot Repository</name>
-            <url>scp://gregluck,ehcache@web.sourceforge.net:/home/groups/e/eh/ehcache/htdocs/snapshotrepository</url>
-        </snapshotRepository>
-
+            The server id here defined must also appear in ~/.m2/settings.xml with username
+            Note: site URL repeated here to ensure correct deployment path -->
         <repository>
-            <id>sourceforge.net</id>
-            <name>SF EHCache Repository</name>
-            <url>scp://gregluck,ehcache@web.sourceforge.net:/home/groups/e/eh/ehcache/htdocs/repository</url>
+            <id>sourceforge-releases</id>
+            <name>Sourceforge Release Repository</name>
+            <url>http://oss.sonatype.org/content/repositories/sourceforge-releases</url>
         </repository>
-
-
-        <site>
-            <id>sourceforge.net</id>
-            <name>SF EHCache Site</name>
-            <url>scp://gregluck@shell.sf.net:/home/groups/e/eh/ehcache/htdocs</url>
-        </site>
+        <snapshotRepository>
+            <id>sourceforge-snapshots</id>
+            <name>Sourceforge Snapshot Repository</name>
+            <url>http://oss.sonatype.org/content/repositories/sourceforge-snapshots</url>
+        </snapshotRepository>
     </distributionManagement>
 
 </project>                  
